--- a/ansible-ipi-install/roles/installer/meta/main.yml
+++ b/ansible-ipi-install/roles/installer/meta/main.yml
@@ -1,7 +1,7 @@
 galaxy_info:
-  author: your name
-  description: your role description
-  company: your company (optional)
+  author: Roger
+  description: The installer role assists in installing Red Hat OpenShift
+  company: Red Hat, Inc.
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
