--- a/ansible-ipi-install/roles/installer/tasks/08_cleanup_sub_man_registeration.yml
+++ b/ansible-ipi-install/roles/installer/tasks/08_cleanup_sub_man_registeration.yml
@@ -1,5 +1,5 @@
 ---
-- name: IPI-INSTALL Unregister host via subscription-manager
+- name: Unregister host via subscription-manager
   redhat_subscription:
     activationkey: "{{ activation_key }}"
     org_id: "{{ org_id }}"
