--- a/ansible-ipi-install/roles/node-prep/tasks/04_modify_sudo_user.yml
+++ b/ansible-ipi-install/roles/node-prep/tasks/04_modify_sudo_user.yml
@@ -1,5 +1,5 @@
 ---
-- name: IPI-INSTALL Add "{{ myuser }}" user to libvirt group and get ssh key setup
+- name: Add "{{ myuser }}" user to libvirt group and get ssh key setup
   user: 
     name: "{{ myuser }}"
     groups: libvirt 
