--- a/ansible-ipi-install/roles/node-prep/tasks/05_enabled_services.yml
+++ b/ansible-ipi-install/roles/node-prep/tasks/05_enabled_services.yml
@@ -1,5 +1,5 @@
 ---
-- name: IPI-INSTALL Enable Services Firewalld
+- name: Enable Services Firewalld
   service:
     name: "{{ item }}"
     state: restarted
