--- a/ansible-ipi-install/roles/node-prep/tasks/08_create_config_install_dirs.yml
+++ b/ansible-ipi-install/roles/node-prep/tasks/08_create_config_install_dirs.yml
@@ -1,5 +1,5 @@
 ---
-- name: IPI-INSTALL Create config dir and install dir
+- name: Create config dir and install dir
   file:
     path: "{{ item }}"
     state: directory
