--- a/ansible-ipi-install/roles/node-prep/tasks/10_power_off_cluster_servers.yml
+++ b/ansible-ipi-install/roles/node-prep/tasks/10_power_off_cluster_servers.yml
@@ -1,5 +1,5 @@
 ---
-- name: IPI-INSTALL Power OFF All Nodes
+- name: Power OFF All Nodes
   ipmi_power:
     name: "{{ hostvars[item]['ipmi_address'] }}"
     user: "{{ hostvars[item]['user'] }}"
