--- a/ansible-ipi-install/roles/node-prep/tasks/02_req_packages.yml
+++ b/ansible-ipi-install/roles/node-prep/tasks/02_req_packages.yml
@@ -1,5 +1,5 @@
 ---
-- name: IPI-INSTALL Install required packages
+- name: Install required packages
   package:
     name: "{{ item }}"
     state: latest
