moving pullsecret_file var to main.yml

--- a/ansible-ipi-install/roles/installer/vars/main.yml
+++ b/ansible-ipi-install/roles/installer/vars/main.yml
@@ -1,2 +1,4 @@
 ---
 # vars file for installer
+pullsecret_file: /home/{{ myuser }}/clusterconfigs/pull-secret.txt
+cmd: openshift-baremetal-install
