--- a/ansible-ipi-install/roles/node-prep/tasks/main.yml
+++ b/ansible-ipi-install/roles/node-prep/tasks/main.yml
@@ -1,4 +1,5 @@
 ---
+- include_tasks: 00_validation.yml
 - include_tasks: 01_sub_man_register.yml
 - include_tasks: 02_bridge.yml 
 - include_tasks: 03_req_packages.yml 
