--- a/ansible-ipi-install/roles/node-prep/tasks/00_validation.yml
+++ b/ansible-ipi-install/roles/node-prep/tasks/00_validation.yml
@@ -4,13 +4,19 @@
 - fail: msg="User is undefined or empty. Set your privileged user"
   when: (myuser is undefined) or (myuser|length == 0)
 
-#- fail: msg="A variable regarding install-config.yml is undefined or empty."
-#  when: (domain is undefined) or (domain|length == 0) or (cluster is undefined) or (cluster|length == 0) or (extcidrnet is undefined) or (extcidrnet|length == 0) or (dnsvip is undefined) or (dnsvip|length == 0) or (numworkers is undefined) or (numworkers|length == 0) or (nummasters is undefined) or (nummasters|length == 0) or (apivip is undefined) or (apivip|length == 0) or (ingressvip is undefined) or (ingressvip|length == 0) or (pullsecret is undefined) or (pullsecret|length == 0)
+- fail: msg="A variable regarding install-config.yml is undefined or empty."
+  when: (domain is undefined) or (domain|length == 0) or (cluster is undefined) or (cluster|length == 0) or (extcidrnet is undefined) or (extcidrnet|length == 0) or (dnsvip is undefined) or (dnsvip|length == 0) or (numworkers is undefined) or (numworkers|length == 0) or (nummasters is undefined) or (nummasters|length == 0) or (pullsecret is undefined) or (pullsecret|length == 0)
 
-#- name: Simple A record (IPV4 address) lookup for api.{{ cluster }}.{{ domain }}
-#  debug: msg="{{ lookup('dig', 'api.{{ cluster |quote }}.{{ domain | quote }}.')}}"
-
-- name: Verify DNS records for API VIP, DNS VIP, Wildcard (Ingress) VIP
+- name: Verify DNS records for API VIP, Wildcard (Ingress) VIP
   set_fact:
     apivip: "{{ lookup('dig', 'api.{{ cluster |quote }}.{{ domain | quote }}.')}}"
     ingressvip: "{{ lookup('dig', 'foo.apps.{{ cluster |quote }}.{{ domain | quote }}.')}}"
+
+- debug: msg="The API VIP is {{ apivip }}"
+- debug: msg="The Wildcard (Ingress) VIP is {{ ingressvip }}"
+
+- fail: msg="The API VIP IP seems to be incorrect. Value was NXDOMAIN."
+  when: (apivip == 'NXDOMAIN')
+
+- fail: msg="The Ingress VIP IP seems to be incorrect. Value was NXDOMAIN."
+  when: (ingressvip == 'NXDOMAIN')
